--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Top 10 Downloader</string>
+    <string name="app_name">Top Tracks This Week</string>
 </resources>
